Stylesheet/emote/tag updates 2016-04-28

--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -285,7 +285,7 @@ a[href|="/sp"] {
 .md { overflow: auto; }
 .usertext-edit .md { overflow: inherit; }
 
-a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fritshrug"], a[href|="/fritbow"], a[href|="/frithmph"], a[href|="/fritnoway"], a[href|="/fritsmeel"], a[href|="/fritsad"], a[href|="/fritsmile"], a[href|="/frithappy"], a[href|="/fritbbbff"], a[href|="/fritwhat"], a[href|="/frityay"], a[href|="/fritter"], a[href|="/fritlie"], a[href|="/fritmad"], a[href|="/fritderp"], a[href|="/frithoof"], a[href|="/fritspet"], a[href|="/fritbake"], a[href|="/fritblush"], a[href|="/fritjoke"], a[href|="/fritsalute"], a[href|="/frithmmm"] {
+a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fritshrug"], a[href|="/fritbow"], a[href|="/frithmph"], a[href|="/fritnoway"], a[href|="/fritsmeel"], a[href|="/fritsad"], a[href|="/fritsmile"], a[href|="/frithappy"], a[href|="/fritbbbff"], a[href|="/fritwhat"], a[href|="/frityay"], a[href|="/fritter"], a[href|="/fritlie"], a[href|="/fritmad"], a[href|="/fritderp"], a[href|="/frithoof"], a[href|="/fritspet"], a[href|="/fritbake"], a[href|="/fritblush"], a[href|="/fritjoke"], a[href|="/fritsalute"], a[href|="/frithmmm"], a[href|="/fritcute"], a[href|="/fritmeh"], a[href|="/fritshock"], a[href|="/fritstare"], a[href|="/fritwink"], a[href|="/fritreally"] {
     display: block;
     clear: none;
     float: left;
@@ -294,7 +294,7 @@ a[href|="/fritapple"], a[href|="/fritsmirk"], a[href|="/fritgrin"], a[href|="/fr
     background-image: url(%%fritemotes%%) !important;
 }
 
-a[href|="/rfritapple"], a[href|="/rfritsmirk"], a[href|="/rfritgrin"], a[href|="/rfritshrug"], a[href|="/rfritbow"], a[href|="/rfrithmph"], a[href|="/rfritnoway"], a[href|="/rfritsmeel"], a[href|="/rfritsad"], a[href|="/rfritsmile"], a[href|="/rfrithappy"], a[href|="/rfritbbbff"], a[href|="/rfritwhat"], a[href|="/rfrityay"], a[href|="/rfritter"], a[href|="/rfritlie"], a[href|="/rfritmad"], a[href|="/rfritderp"], a[href|="/rfrithoof"], a[href|="/rfritspet"], a[href|="/rfritbake"], a[href|="/rfritblush"], a[href|="/rfritjoke"], a[href|="/rfritsalute"], a[href|="/rfrithmmm"] {
+a[href|="/rfritapple"], a[href|="/rfritsmirk"], a[href|="/rfritgrin"], a[href|="/rfritshrug"], a[href|="/rfritbow"], a[href|="/rfrithmph"], a[href|="/rfritnoway"], a[href|="/rfritsmeel"], a[href|="/rfritsad"], a[href|="/rfritsmile"], a[href|="/rfrithappy"], a[href|="/rfritbbbff"], a[href|="/rfritwhat"], a[href|="/rfrityay"], a[href|="/rfritter"], a[href|="/rfritlie"], a[href|="/rfritmad"], a[href|="/rfritderp"], a[href|="/rfrithoof"], a[href|="/rfritspet"], a[href|="/rfritbake"], a[href|="/rfritblush"], a[href|="/rfritjoke"], a[href|="/rfritsalute"], a[href|="/rfrithmmm"], a[href|="/rfritcute"], a[href|="/rfritmeh"], a[href|="/rfritshock"], a[href|="/rfritstare"], a[href|="/rfritwink"], a[href|="/rfritreally"] {
     display: block;
     clear: none;
     float: left;
@@ -333,6 +333,12 @@ a[href|="/fritblush"], a[href|="/rfritblush"] { background-position: -70px -350p
 a[href|="/fritjoke"], a[href|="/rfritjoke"] { background-position: -140px -350px; }
 a[href|="/fritsalute"], a[href|="/rfritsalute"] { background-position: -210px -350px; }
 a[href|="/frithmmm"], a[href|="/rfrithmmm"] { background-position: -0px -420px; }
+a[href|="/fritcute"], a[href|="/rfritcute"] { background-position: -70px -420px; }
+a[href|="/fritmeh"], a[href|="/rfritmeh"] { background-position: -140px -420px; }
+a[href|="/fritshock"], a[href|="/rfritshock"] { background-position: -210px -420px; }
+a[href|="/fritstare"], a[href|="/rfritstare"] { background-position: -0px -490px; }
+a[href|="/fritwink"], a[href|="/rfritwink"] { background-position: -70px -490px; }
+a[href|="/fritreally"], a[href|="/rfritreally"] { background-position: -140px -490px; }
 
 a[href|="/fritnya"], a[href|="/fritteehee"], a[href|="/hardhatfrits"] {
     display: block;
@@ -569,6 +575,8 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 .flair-soursweet { background-position: -300% -2600%; }
 .flair-sugarcoat { background-position: 0 -2700%; }
 .flair-sunnyflare { background-position: -100% -2700%; }
+.flair-sunburst { background-position: -200% -2700%; }
+.flair-gilda { background-position: -300% -2700%; }
 .flair-surprise { background-position: 0 -2800%; }
 .flair-snowdrop { background-position: -100% -2800%; }
 .flair-peachbottom { background-position: -200% -2800%; }
