--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -6,6 +6,14 @@ a[href|="/braescrunch"] {
     height: 144px;
     background-image:url(%%braescrunch%%)
 }
+a[href|="/speccyglee"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 90px;
+    height: 129px;
+    background-image:url(%%scae%%)
+}
 a[href|="/kat"] {
     display: block;
     clear: none;
@@ -328,14 +336,7 @@ a[href|="/yallbrushing"] {
     background-image:url(%%yallbrushing%%)
 }
 
-a[href|="/brushingtime"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 180px;
-    height: 184px;
-    background-image:url(%%brushingtime%%)
-}
+
 
 a[href|="/berrypunchcolgatenuzzle"] {
     display: block;
