--- a/source-css/flitter.css
+++ b/source-css/flitter.css
@@ -197,6 +197,8 @@ a[href|="/fillyflitter"]
 .flair-soursweet { background-position: -300% -2600%; }
 .flair-sugarcoat { background-position: 0 -2700%; }
 .flair-sunnyflare { background-position: -100% -2700%; }
+.flair-sunburst { background-position: -200% -2700%; }
+.flair-gilda { background-position: -300% -2700%; }
 .flair-surprise { background-position: 0 -2800%; }
 .flair-snowdrop { background-position: -100% -2800%; }
 .flair-peachbottom { background-position: -200% -2800%; }
