--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -172,9 +172,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Washing their hooves"}
+div.titlebox .subscribers span.number:after {content:" In the PloungeCano"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Have sparkling clean hooves" }
+div.titlebox p.users-online span.number:after { content: " Fighting over the PloungeStone Sceptre" }
 div.titlebox p.users-online span.word { display: none }
 
 /*Flair modifications*/
@@ -1036,6 +1036,7 @@ padding: 0
 .flair-maud {background-position: -100% -1700%}
 .flair-bulkbiceps {background-position: -200% -1700%}
 .flair-spike {background-position: -300% -1700%}
+.flair-pdle {background-position: -400% -1700%}
 
 .flair-harshwhinny {background-position: 0% -1800%}
 .flair-coco {background-position: -100% -1800%}
