--- a/source-css/adagiodazzle.css
+++ b/source-css/adagiodazzle.css
@@ -61,7 +61,7 @@
 
 /*** Theme ***/
 
-#header-img { margin: 2px 0px -2px 2px }
+#header-img { margin: 2px 0px -2px 4px }
 
 .side h6 del { color: inherit }
 .side sup:nth-of-type(1) { padding-left: 40px }
@@ -415,6 +415,9 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 .flair-lemonzest
 {background-position:-200% -2600%}
 
+.flair-sunburst
+{background-position:-200% -2700%}
+
 .flair-peachbottom
 {background-position:-200% -2800%}
 
@@ -498,6 +501,9 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 
 .flair-soursweet
 {background-position:-300% -2600%}
+
+.flair-gilda
+{background-position:-300% -2700%}
 
 .flair-harshwhinny
 {background-position:-300% -2800%}
@@ -597,6 +603,15 @@ a[href|="/adagiowhat"], a[href|="/adwhat"] { background-position: -140px -70px; 
 a[href|="/adagiolean"], a[href|="/adlean"] { background-position: -210px -70px; }
 a[href|="/adagioright"], a[href|="/adright"] { background-position: -0px -140px; }
 a[href|="/adagiosad"], a[href|="/adsad"] { background-position: -70px -140px; }
+
+a[href|="/adagiopoof"], a[href|="/adpoof"] {
+  display: block;
+  clear: none;
+  float: left;
+  width: 136px;
+  height: 120px;
+  background-image: url(%%poof%%) !important;
+}
 
 a[href|="/adagiostanding"], a[href|="/adstanding"], a[href|="/radagiostanding"], a[href|="/radstanding"] {
   display: block;
