--- a/source-css/beautybrass.css
+++ b/source-css/beautybrass.css
@@ -507,6 +507,9 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 .flair-lemonzest
 {background-position:-200% -2600%}
 
+.flair-sunburst
+{background-position:-200% -2700%}
+
 .flair-peachbottom
 {background-position:-200% -2800%}
 
@@ -590,6 +593,9 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 
 .flair-soursweet
 {background-position:-300% -2600%}
+
+.flair-gilda
+{background-position:-300% -2700%}
 
 .flair-harshwhinny
 {background-position:-300% -2800%}
