--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -1,55 +1,62 @@
 /*Banner*/
 
-#header-img {
-  z-index: 9998;
-  position: absolute;
-  top: 23px;
-}
-
-.pagename a {
-  display: block;
-  background: url(%%Sunset-Title%%) no-repeat;
-  width: 350px;
-  height: 94px;
-  content: " <p> ";
-  font-size: 0;
-  left:143 px;
-  margin: 28px auto auto;
-}
-
-.pagename {
-  display: block; 
-  position: relative; 
-  overflow: hidden; 
-  height: 114px; 
-  margin-top: -34px;
-  margin-right:-10px; 
-  border-bottom: 0 solid #e2d8ca;
-  box-shadow: 0 0 6px #555;
-}
-    
-.pagename:after {
-  background: transparent url(%%header%%) repeat;
-  content: "";
-  z-index: -200;
-  left: 0px;
-  top: 0px;
-  position: absolute;
-  width: 100%;
-  height: 114px;
-  display: block;
-  overflow: hidden;
-}
-    
 #header {
+  position: relative;
+  width: 100%;
+  height: 191px;
   border-bottom: 0 solid #e2d8ca;
   box-shadow: 0 0 6px #555;
   z-index:99;
   background-color:#5E5E5E!important;
 }
 
-#header-bottom-left{
-  overflow:hidden;
+#header::before, #header::after {
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 191px;
+  top: 0;
+  background-repeat: repeat-x;
+  z-index: -2;
+}
+
+#header::before {
+  left: 0;
+  background-image: url(%%chsleft%%);
+  background-position: left;
+}
+
+#header::after {
+  right: 0;
+  background-image: url(%%chsright%%);
+  background-position: right;
+}
+
+.pagename { font-size: 0; }
+
+.pagename a {
+  display: block;
+  position: absolute;
+  width: 409px;
+  height: 191px;
+  top: 0;
+  left: calc(50% - 204px) !important;
+  background: url(%%chscenter%%) no-repeat;
+  z-index: -1;
+}
+
+#header-bottom-left {
+  width: 300px;
+  height: 168px;
+  overflow: hidden;
+}
+
+#header-img { margin: 0px 0px -16px 4px }
+
+#header-img-a {
+  display: block;
+  position: absolute;
+  bottom: 0;
 }
 
 @-webkit-keyframes sidescroll {
@@ -82,7 +89,7 @@ div.content { overflow: hidden; }
 
 #header-bottom-right {
   right: 20px;
-  background-color: rgba(0, 0, 0, 0.3)!important;
+  background-color: rgba(255, 255, 255, 0.5)!important;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   -o-border-radius: 4px;
@@ -102,7 +109,7 @@ div.content { overflow: hidden; }
 
 div#header-bottom-left ul.tabmenu {
   position: absolute;
-  top: 89.5%;
+  top: 93.5%;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
@@ -644,6 +651,9 @@ a[href|="/cadence"],a[href|="/cadance"],a[href|="/princesscadance"],a[href|="/pr
 .flair-lemonzest
 {background-position:-200% -2600%}
 
+.flair-sunburst
+{background-position:-200% -2700%}
+
 .flair-peachbottom
 {background-position:-200% -2800%}
 
@@ -727,6 +737,9 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 
 .flair-soursweet
 {background-position:-300% -2600%}
+
+.flair-gilda
+{background-position:-300% -2700%}
 
 .flair-harshwhinny
 {background-position:-300% -2800%}
@@ -1788,7 +1801,7 @@ a.thumbnail.self{margin-right:-14px}
 .side .md table:last-of-type {
   display: table;
   position: absolute;
-  top: 124px;
+  top: 206px;
   left: 6px;
   width: calc(100% - 356px) !important;
   margin: 0;
@@ -1833,7 +1846,7 @@ a.thumbnail.self{margin-right:-14px}
 
 .side .md table:last-of-type td a { color: #0079D3 !important }
 
-.content { margin-top: 58px }
+.content { margin-top: 63px }
 
 /*** Tricks ***/
 
