--- a/source-css/sweetie_belle.css
+++ b/source-css/sweetie_belle.css
@@ -1,7 +1,9 @@
 /*Changing readers in sidebar*/
+
 div.titlebox span.word {
     display: none
     }
+
 div.titlebox span.number:after {
     content: " Cutetastically Fantastics"
     }
@@ -9,18 +11,27 @@ div.titlebox span.number:after {
 .side .titlebox .users-online .number:after {
     content: " are making capes!" !important;
     }
+
 .sidecontentbox .flair-cmc, .titlebox .flair-cmc, .sidecontentbox .flair-cmcchinchy, .titlebox .flair-cmcchinchy, .sidecontentbox .flair-pinkiepiecmc, .titlebox .flair-pinkiepiecmc {
     display: none
     }
+
 /*LINK COLORS*/
 
-#siteTable div.thing a.title { color: #A47BB4; }
-#siteTable div.thing a.title:visited { color: #EAA9CA }
+#siteTable div.thing a.title {
+    color: #A47BB4;
+    }
+
+#siteTable div.thing a.title:visited {
+    color: #EAA9CA 
+    }
+
 .comment .flat-list.buttons li a {
     color:  #A6D397;
     }
 
 /*BACKGROUND*/ 
+
 body {
     background: url(%%sbstaretrnsp%%)  
     no-repeat fixed center center 
@@ -57,7 +68,6 @@ body {
     display: none;
     }
 
-
 .sidebox.submit-text .morelink {
     background: #EAA9CA;
     border: 2px #A6D397;
@@ -90,11 +100,18 @@ body {
 
 /*UPHOOVES AND DOWNHOOVES*/
 
-.arrow.upmod { background: url(%%arrowup%%) no-repeat 0 0; }
-.arrow.downmod { background: url(%%arrowdown%%) no-repeat 0 0; }
+.arrow.upmod {
+    background: url(%%arrowup%%) no-repeat 0 0;
+    }
+
+.arrow.downmod {
+    background: url(%%arrowdown%%) no-repeat 0 0;
+    }
+
 .midcol .score.likes {
     color: #A6D397;
     }
+
 .midcol .score.dislikes {
     color: #A6D397;
     }
@@ -103,6 +120,7 @@ body {
     }
 
 /* FLAIR */
+
 .flairselector .customizer {
     display: none !important;
     }
@@ -118,24 +136,30 @@ body {
     width: 16px;
     height: 16px
     }
+
 .flair-CMC {
     background-position: 0 0px
     }
+
 .flair-derelle {
     background-position: 0px -26px;
     }
+
 .flair-Sweetie {
     background-position: 0px -52px;
     }
+
 .flair-sweetiebelle {
     background-position: 0px -78px;
     }
+
 .flair-sweetiebellecutiemark {
     background-position: 0px -104px;
     }
 
 
 /* Dictionary */
+
 #search input[type="text"] {
     background: url(%%searchbarsweets%%) top left no-repeat !important;
     padding: 17px 7px 18px 69px !important;
@@ -143,32 +167,41 @@ body {
 
 
 /* Table for Emotes */
+
 /* sidebar */
+
 .titlebox strong {
     font-size: medium
     }
+
 .titlebox del {
     color: white
     }
+
 .titlebox em {
     font-size: 9px;
     text-decoration: none;
     font-style: normal
     }
+
 .titlebox strong em {
     font-size: 8px;
     font-style: normal;
     font-weight: normal
     }
+
 .titlebox table {
     display: none;
     clear: both
     }
+
  .side div.usertext-body:hover table {
     display: block;
     clear: both
     }
+
 /* mainpage hover selections */
+
 #siteTable .link {
     position: relative;
     overflow: hidden;
@@ -177,12 +210,12 @@ body {
     }
 
 /* ---------- Emoticons ---------- */
+
 /***********
 SB Emoticons
 ***********/
 
-
-a[href|="/sb00"], a[href|="/sb01"], a[href|="/sb02"], a[href|="/sb03"], a[href|="/sb04"], a[href|="/sb05"], a[href|="/sb15"], a[href|="/sb06"], a[href|="/sb16"], a[href|="/sb14"], a[href|="/sb10"], a[href|="/sb11"], a[href|="/sb12"], a[href|="/sb13"], a[href|="/sbaww"], a[href|="/sbderelle"], a[href|="/sbderp"], a[href|="/sbhaithar"], a[href|="/sbhappy"], a[href|="/sbhushnow"], a[href|="/sbmad"], a[href|="/sbsad"], a[href|="/sbscootabelle"], a[href|="/sbsly"], a[href|="/sbstare"], a[href|="/sbwawity"], a[href|="/sbwow"], a[href|="/sbwut"] {
+a[href|="/sb00"], a[href|="/sb02"], a[href|="/sb03"], a[href|="/sb04"], a[href|="/sb15"], a[href|="/sb06"], a[href|="/sb14"], a[href|="/sb10"], a[href|="/sb11"], a[href|="/sb12"], a[href|="/sb13"], a[href|="/sbaww"], a[href|="/sbderelle"], a[href|="/sbderp"], a[href|="/sbhaithar"], a[href|="/sbhappy"], a[href|="/sbhushnow"], a[href|="/sbmad"], a[href|="/sbsad"], a[href|="/sbsly"], a[href|="/sbstare"], a[href|="/sbwawity"], a[href|="/sbwut"] {
     display: block;
     clear: none;
     float: left;
@@ -191,75 +224,135 @@ a[href|="/sb00"], a[href|="/sb01"], a[href|="/sb02"], a[href|="/sb03"], a[href|=
     background-image: url(%%emotes%%) !important
     }
 
+/*Oddly sized emotes*/
+
+a[href|="/sbscootabelle"], a[href|="/scootabelle"], a[href|="/sb16"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 51px;
+    background-image: url(%%emotes%%) !important
+    }
+
+a[href|="/sbwow"], a[href|="/sb12"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 64px;
+    background-image: url(%%emotes%%) !important
+    }
+
+a[href|="/sbderelle"], a[href|="/sb01"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 65px;
+    height: 100px;
+    background-image: url(%%emotes%%) !important
+    }
+
+a[href|="/sbhushnow"], a[href|="/sb05"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 67px;
+    background-image: url(%%emotes%%) !important
+    }
+
+
 a[href|="/sb00"], a[href|="/sbaww"] {
     background-position: -0px -0px
     }
+
 a[href|="/sb01"], a[href|="/sbderelle"] {
     background-position: -0px -150px
     }
+
 a[href|="/sb02"], a[href|="/sbderp"] {
     background-position: -0px -350px
     }
+
 a[href|="/sb03"], a[href|="/sbhaithar"] {
     background-position: -0px -500px
     }
+
 a[href|="/sb04"], a[href|="/sbhappy"] {
     background-position: -0px -638px
     }
+
 a[href|="/sb05"], a[href|="/sbhushnow"] {
     background-position: -0px -788px
     }
+
 a[href|="/sb15"], a[href|="/sbmad"] {
     background-position: -0px -922px
     }
+
 a[href|="/sb06"], a[href|="/sbsad"] {
     background-position: -0px -1072px
     }
-a[href|="/sb16"], a[href|="/sbscootabelle"] {
+
+a[href|="/sb16"], a[href|="/sbscootabelle"], a[href|="/scootabelle"] {
     background-position: -0px -1222px
     }
+
 a[href|="/sb14"], a[href|="/sbsly"] {
     background-position: -0px -1323px
     }
+
 a[href|="/sb10"], a[href|="/sbstare"] {
     background-position: -0px -1481px
     }
+
 a[href|="/sb11"], a[href|="/sbwawity"] {
     background-position: -0px -1627px
     }
+
 a[href|="/sb12"], a[href|="/sbwow"] {
     background-position: -0px -1770px
     }
+
 a[href|="/sb13"], a[href|="/sbwut"] {
     background-position: -0px -1884px
     }
+
 a[href|="/sp"] {
     display: inline-block;
     padding-right: 100%
     }
 
 /* ---------- Hide emoticon tables in the sidebar until sb14 is hovered over ---------- */
+
 /* sidebar */
+
 .titlebox strong {
     font-size: medium
     }
+
 .titlebox del {
     color: white
     }
+
 .titlebox em {
     font-size: 9px;
     text-decoration: none;
     font-style: normal
     }
+
 .titlebox strong em {
     font-size: 8px;
     font-style: normal;
     font-weight: normal
     }
+
 .titlebox table {
     display: none;
     clear: both
     }
+
  .side div.usertext-body:hover table {
     display: block;
     clear: both
@@ -267,19 +360,25 @@ a[href|="/sp"] {
 
 
 /* remove subreddit bar border */
+
 #sr-header-area {
     border: none !important
     }
+
 /* hover style for header tabs */
+
 .side .md ol li a:hover, .tabmenu li a:hover, .pagename a:hover, #newlink li.selected a:hover {
     background-color: #FFFFC2;
     color: red;
     text-decoration: none
     }
+
 #header-img {
     margin: 7px 7px -5px 0px;
     }
+
 /* curved borders for tabs */
+
 .tabmenu li a, .pagename a {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -288,21 +387,27 @@ a[href|="/sp"] {
     }
 
 /* ---------- Make the CSS text box bigger ---------- */
+
 .stylesheet-customize-container textarea {
     height: 600px
     }
 
 /* ---------- Announcement box at the top. ---------- */
+
 /* Uncomment to activate. To edit the text, put the following at the bottom of the sidebar: "1. TEXT HERE" */
+
 .content {
-    margin-top: 15px /*Was 55px, because I assume the announcement box is barely used anymore ~aemantaslim*/
+    margin-top: 15px /*Was 55px, because I assume the announcement box is barely used anymore ~aeman*/
     }
+
 .pagename {
     font-size: 12pt
     }
+
 .titlebox form {
     position: static
     }
+
 .titlebox .usertext-body .md ol {
     width: auto;
     border: 1px solid #E6EB9D;
@@ -319,9 +424,11 @@ a[href|="/sp"] {
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px
     }
+
 .titlebox .usertext-body .md ol li {
     margin: 3px
     }
+
 .titlebox .bottom {
     margin-top: 30px;
     }
