--- a/addon/extracss-pure.css
+++ b/addon/extracss-pure.css
@@ -577,3 +577,54 @@ a[href|="/rc21"][href*="-m"]::after {
     transform: scale(0.85) translate(-1px, -12px) rotate(-47deg);
     visibility: visible;
 }
+
+/*
+ * Various flags by HeyItsShuga.
+ */
+
+/*==blur==*/
+
+.bpflag-blur {
+   filter: blur(5px)!important;
+}
+
+/*==wobble==*/
+
+@keyframes bpm-wobble {
+    0% { transform:rotate(32deg)scaleX(1) }
+    33% { transform:rotate(-32deg)scaleX(1) }
+    66% { transform:rotate(32deg)scaleX(1) }
+    100% { transform:rotate(-32deg)scaleX(1) }
+}
+
+.bpflag-w {
+   animation: bpm-wobble 2s infinite alternate linear;
+}
+
+.bpflag-wobble {
+   animation: bpm-wobble 2s infinite alternate linear;
+}
+
+.bpflag-rock {
+   animation: bpm-wobble 2s infinite alternate linear;
+}
+
+/*==sepia==*/
+
+.bpflag-sepia {
+   filter: sepia(1)!important; 
+}
+
+.bpflag-s {
+   filter: sepia(1)!important; 
+}
+
+/*==monochrome==*/
+
+.bpflag-bw {
+   filter: grayscale(1)!important;
+}
+
+.bpflag-mono {
+   filter: grayscale(1)!important;
+}
