Added -blur shorthand

--- a/addon/extracss-webkit.css
+++ b/addon/extracss-webkit.css
@@ -581,6 +581,10 @@ a[href|="/rc21"][href*="-m"]::after {
    -webkit-filter: blur(1.5px)!important;
 }
 
+.bpflag-b {
+   -webkit-filter: blur(1.5px)!important;
+}
+
 /*==wobble==*/
 
 @-webkit-keyframes bpm-wobble {
