Added -blur shorthand

--- a/addon/extracss-pure.css
+++ b/addon/extracss-pure.css
@@ -588,6 +588,10 @@ a[href|="/rc21"][href*="-m"]::after {
    filter: blur(1.5px)!important;
 }
 
+.bpflag-b {
+   filter: blur(1.5px)!important;
+}
+
 /*==wobble==*/
 
 @keyframes bpm-wobble {
