Fixed Comic Sans, added Papyrus.
Fixed a bug: Comic Sans wouldn't work on Macs.

I also added in Papyrus. NYEH HEH HEH!

--- a/addon/bpmotes.css
+++ b/addon/bpmotes.css
@@ -446,7 +446,7 @@ word-break:normal;}
 }
 
 .bpflag-comicsans_excl_ {
-    font-family: "Comic-Sans MS", cursive
+    font-family: "Comic-Sans MS", "Comic Sans MS", "Marker Felt", cursive
 }
 
 .bpflag-impact_excl_ {
@@ -455,6 +455,10 @@ word-break:normal;}
 
 .bpflag-tahoma_excl_ {
     font-family: Tahoma, Geneva, sans-serif
+}
+
+.bpflag-papyrus_excl_ {
+    font-family: Papyrus, fantasy, cursive
 }
 
 /*
