--- a/addon/extracss-pure.css
+++ b/addon/extracss-pure.css
@@ -579,16 +579,9 @@ a[href|="/rc21"][href*="-m"]::after {
 }
 
 /*
- * Various flags by HeyItsShuga.
+ * -wobble flag by HeyItsShuga.
  */
 
-/*==blur==*/
-
-.bpflag-blur {
-   filter: blur(1.5px)!important;
-}
-
-/*==wobble==*/
 
 @keyframes bpm-wobble {
     to { transform:rotate(32deg)scaleX(1) }
@@ -601,20 +594,4 @@ a[href|="/rc21"][href*="-m"]::after {
 
 .bpflag-rock {
    animation: bpm-wobble 0.75s infinite alternate linear;
-}
-
-/*==sepia==*/
-
-.bpflag-sepia {
-   filter: sepia(1)!important;
-}
-
-/*==monochrome==*/
-
-.bpflag-bw {
-   filter: grayscale(1)!important;
-}
-
-.bpflag-mono {
-   filter: grayscale(1)!important;
 }
